# ModuPrompt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  styleguide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml  security.yml
.github/workflows/: ci.yml
context/: 00_invariants.md  01_glossary.md  02_architecture_overview.md  03_kernel_contract.md  05_orchestration_ontology.md  architecture.md  index.md  project_overview.md  references.md  roadmap.md
context/agent/: 06_agent_system.md  07_comms_and_channels.md  08_capsules_and_context.md  09_agent_blueprint_spec.md  10_hooks.md
context/execution/: 23_backends.md  24_remote_workers.md
context/future/: context_engineering_mode.md
context/kernel/: 04_event_model.md  transport.md
context/orchestration/: boards.md  git_worktrees.md  pipelines.md  tasks.md  webhooks.md
context/prd/: PRD_agent_builder.md  PRD_cli_tui.md  PRD_kernel_event_system.md  PRD_multiplayer_collab.md  PRD_orchestrator_mode.md  PRD_security_enterprise.md  PRD_storage_deployment_profiles.md  PRD_tools_skills_mcp.md  PRD_web_librarian.md
context/security/: 19_security_architecture.md  20_secrets.md  21_policy_dsl.md  22_audit.md
context/storage/: 15_storage_profiles.md  16_sqlite_profile.md  17_postgres_profile.md  18_nats_jetstream_profile.md
context/tooling/: 11_wasm_sandbox.md  12_tools_and_schemas.md  13_skills.md  14_mcp_strategy.md
context/ui/: 25_ui_architecture.md
context/validation/: issue_002_hello_world.md
crates/mp-cli/: Cargo.toml
crates/mp-cli/src/: main.rs
crates/mp-client/: Cargo.toml
crates/mp-client/src/: lib.rs
crates/mp-daemon/: Cargo.toml
crates/mp-daemon/src/: lib.rs  main.rs
crates/mp-daemon/tests/: daemon_flow.rs
crates/mp-dirs/: Cargo.toml
crates/mp-dirs/src/: lib.rs
crates/mp-kernel/: Cargo.toml
crates/mp-kernel/src/: lib.rs
crates/mp-projections/: Cargo.toml
crates/mp-projections/src/: lib.rs
crates/mp-protocol/: Cargo.toml
crates/mp-protocol/src/: lib.rs
crates/mp-storage/: Cargo.toml
crates/mp-storage-sqlite/: Cargo.toml
crates/mp-storage-sqlite/migrations/: 0001_init.sql
crates/mp-storage-sqlite/src/: lib.rs
crates/mp-storage/src/: lib.rs
schemas/commands/: project.create.v1.json  workspace.create.v1.json
schemas/events/: command.rejected.v1.json  project.created.v1.json  workspace.created.v1.json
schemas/transport/: error_response.v1.json  stdio.frame.v1.json
scripts/: check_docs.py
