[workspace]
members = [
  "crates/mp-dirs",
  "crates/mp-kernel",
  "crates/mp-protocol",
  "crates/mp-storage",
  "crates/mp-storage-sqlite",
  "crates/mp-projections",
  "crates/mp-client",
  "crates/mp-daemon",
  "crates/mp-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "http2", "macros", "query", "tracing", "ws"] }
base64 = "0.22"
bytes = "1.11"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
futures = "0.3"
jsonschema = "0.17"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1.36", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.7", features = ["v7", "serde"] }
url = "2.5"
