[package]
name = "mp-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "mpctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
mp-client = { path = "../mp-client" }
mp-kernel = { path = "../mp-kernel" }
mp-protocol = { path = "../mp-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
