[package]
name = "mp-client"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
mp-dirs = { path = "../mp-dirs" }
mp-kernel = { path = "../mp-kernel" }
mp-protocol = { path = "../mp-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
