[package]
name = "mp-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
async-stream.workspace = true
base64.workspace = true
clap.workspace = true
futures.workspace = true
mp-kernel = { path = "../mp-kernel" }
mp-protocol = { path = "../mp-protocol" }
mp-storage = { path = "../mp-storage" }
mp-storage-sqlite = { path = "../mp-storage-sqlite" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
mp-client = { path = "../mp-client" }
futures.workspace = true
